[package]
name = "async-ssh"
version = "0.1.3"

description = "High-level library for asynchronous SSH connections"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/async-ssh"
homepage = "https://github.com/jonhoo/async-ssh"
repository = "https://github.com/jonhoo/async-ssh.git"

keywords = ["ssh", "asynchronous"]
categories = ["network-programming", "api-bindings"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/async-ssh" }
maintenance = { status = "experimental" }

[dependencies]
futures = "0.1"
thrussh = "0.21.5"
tokio = "0.1"
thrussh-keys = "0.11.9"

[replace]
"thrussh:0.21.5" = { git = "https://github.com/jdelgadoalfonso/thrussh.git" }
"thrussh-keys:0.11.9" = { git = "https://github.com/jdelgadoalfonso/thrussh.git" }
"thrussh-libsodium:0.1.4" = { git = "https://github.com/jdelgadoalfonso/thrussh.git" }
